--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/fonts": "^0.11.1",
+    "@tailwindcss/vite": "^4.1.3",
     "nuxt": "^3.16.2",
+    "tailwindcss": "^4.1.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "@types/youtube": "^0.1.0"
   }
 }
