--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@nuxt/fonts": "^0.11.1",
+    "@nuxtjs/supabase": "^2.0.3",
+    "@pinia/nuxt": "^0.11.3",
     "@tailwindcss/vite": "^4.1.3",
+    "@vueuse/core": "^14.1.0",
     "nuxt": "^3.16.2",
+    "pinia": "^3.0.4",
     "tailwindcss": "^4.1.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
