--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "npx nuxi prepare"
   },
   "dependencies": {
     "@nuxt/fonts": "^0.11.1",
@@ -22,6 +22,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@types/youtube": "^0.1.0"
+    "@types/youtube": "^0.1.0",
+    "nuxi": "^3.32.0"
   }
 }
