--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "npx nuxi prepare"
+    "preview": "nuxt preview"
   },
   "dependencies": {
     "@nuxt/fonts": "^0.11.1",
