--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,10 @@
 [build]
-  command = "npm run build"
+  command = "npm ci && npm run build"
   publish = ".output/public"
 
 [build.environment]
   NODE_VERSION = "20.19.0"
+  NPM_FLAGS = "--prefer-offline"
 
 [[redirects]]
   from = "/api/*"
