--- a/netlify.toml
+++ b/netlify.toml
@@ -1,17 +1,6 @@
 [build]
   command = "npm ci && npm run build"
-  publish = ".output/public"
+  publish = "dist"
 
 [build.environment]
   NODE_VERSION = "20.19.0"
-  NPM_FLAGS = "--prefer-offline"
-
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/server/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
