--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@pinia/nuxt": "^0.11.3",
     "@tailwindcss/vite": "^4.1.3",
     "@vueuse/core": "^14.1.0",
+    "dotenv": "^17.2.3",
     "nuxt": "^3.16.2",
     "pinia": "^3.0.4",
     "tailwindcss": "^4.1.3",
