--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nuxt/fonts": "^0.11.1",
+    "@nuxt/image": "^2.0.0",
     "@nuxtjs/supabase": "^2.0.3",
     "@pinia/nuxt": "^0.11.3",
     "@tailwindcss/vite": "^4.1.3",
